apps/sonarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  selector:
    matchLabels:
      app: sonarr
  replicas: 1
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.8
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: data
              mountPath: /config
            - name: downloads
              mountPath: /mnt/tank/Downloads
            - name: series
              mountPath: /mnt/tank/Series
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: sonarr
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads-pvc
        - name: series
          persistentVolumeClaim:
            claimName: series-pvc
